--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
 .fim{
     width: 2em;
     height: 3em;
+    border-radius: 0% 0% 0.7em 0.7em;
     background: linear-gradient(90deg,
         #1f1f1f 0%,
         #505050 30%,
@@ -57,12 +58,12 @@ body{
 
 .meio{
     width: 1.5em;
-    height: 3em;
+    height: 3.2em;
     background: linear-gradient(90deg,
     #1f1f1f 0%,
-    #505050 30%,
-    #8c8c8c 50%,
-    #505050 70%,
+    #313131 30%,
+    #424242 50%,
+    #313131 70%,
     #1f1f1f 100%
 ); 
 }
@@ -71,11 +72,12 @@ body{
     height: 3em;
     width: 2em;
     position: relative;
-    background: linear-gradient(90deg,
+    border-radius: 0% 0% 1em 1em;
+    background: linear-gradient(20deg,
     #1f1f1f 0%,
-    #505050 30%,
-    #8c8c8c 50%,
-    #505050 70%,
+    #434343 30%,
+    #68788b 50%,
+    #434343 70%,
     #1f1f1f 100%
 ); 
 }
@@ -88,9 +90,9 @@ body{
     height: 1.2em;
     background: linear-gradient(0deg,
         #1f1f1f 0%,
-        #505050 30%,
-        #8c8c8c 50%,
-        #505050 70%,
+        #615463 30%,
+        #4e5c81 50%,
+        #4f3374 70%,
         #1f1f1f 100%
     ); 
     z-index: -1;
